<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2019 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon_control_normal_24dp"
        android:orderInCategory="10"
        android:title="@string/text_editor_find_replace"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/undo_icon_control_normal_24dp"
        android:orderInCategory="20"
        android:title="@string/text_editor_undo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/save_icon_control_normal_24dp"
        android:orderInCategory="30"
        android:title="@string/save"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/redo_icon_control_normal_24dp"
        android:orderInCategory="40"
        android:title="@string/text_editor_redo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reload"
        android:orderInCategory="50"
        android:title="@string/reload"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_encoding"
        android:orderInCategory="60"
        android:title="@string/text_editor_encoding"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_language"
        android:orderInCategory="70"
        android:title="@string/text_editor_language"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_word_wrap"
        android:checkable="true"
        android:orderInCategory="80"
        android:title="@string/text_editor_word_wrap"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_line_numbers"
        android:checkable="true"
        android:orderInCategory="90"
        android:title="@string/text_editor_line_numbers"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_font_size"
        android:orderInCategory="100"
        android:title="@string/text_editor_font_size"
        app:showAsAction="never" />
</menu>
