<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2018 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<!--
  ~ Everything about the tables themselves lives in the table list on the left, so the overflow is
  ~ left holding only what moves data in and out of the database.
  -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon_control_normal_24dp"
        android:orderInCategory="5"
        android:title="@string/database_editor_search"
        app:actionViewClass="me.zhanghai.android.files.ui.FixQueryChangeSearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_sql_console"
        android:icon="@drawable/sql_console_icon_control_normal_24dp"
        android:orderInCategory="10"
        android:title="@string/database_editor_sql_console"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_write_back"
        android:icon="@drawable/save_icon_control_normal_24dp"
        android:orderInCategory="20"
        android:title="@string/database_editor_write_back"
        app:showAsAction="ifRoom" />

    <!-- One entry rather than a format submenu: the file that gets picked says which it is. -->
    <item
        android:id="@+id/action_import"
        android:orderInCategory="60"
        android:title="@string/database_editor_import"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:orderInCategory="70"
        android:title="@string/database_editor_export"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/action_export_csv"
                android:title="@string/database_editor_export_csv" />

            <item
                android:id="@+id/action_export_json"
                android:title="@string/database_editor_export_json" />

            <item
                android:id="@+id/action_export_sql"
                android:title="@string/database_editor_export_sql" />

            <item
                android:id="@+id/action_export_database"
                android:title="@string/database_editor_export_database" />
        </menu>
    </item>
</menu>
